personal website add

--- a/people.html
+++ b/people.html
@@ -33,7 +33,7 @@
                        <b>Allyson Ettinger</b><br><br>
                        Allyson is an Assistant Professor in the Departments of Linguistics and Computer Science at the University of Chicago.
                        Her work focuses on evaluation and analysis of meaning competence in NLP systems, as well as computational modeling of real-time language comprehension.<br><br>
-                       <a href="https://aetting.github.io/">Website</a>
+                       <a href="https://aetting.github.io/">Personal website</a>
                    </td>
                </tr>
 
@@ -58,7 +58,7 @@
                      <b>Sanghee Kim</b><br><br>
                      Sanghee is a PhD student in the Department of Linguistics, focused on problems of language understanding in humans and machines.<br><br>
 
-                     <a href="https://sangheekim.net">Website</a>
+                     <a href="https://sangheekim.net">Personal website</a>
 
                   </td>
                </tr>
@@ -73,7 +73,7 @@
                      Kanishka is a PhD student in Natural Language Understanding at Purdue University, advised by Julia Taylor Rayz as well as Allyson Ettinger. He is interested in how
                      language models capture aspects of human-like semantic cognition. Specific topics of interest: concepts and categories, model analysis and evaluation, lexical semantics.<br><br>
 
-                     <a href="https://kanishka.xyz">Website</a>
+                     <a href="https://kanishka.xyz">Personal website</a>
                    </td>
                </tr>
                <tr style="border:0px;">
@@ -86,7 +86,7 @@
                      <b>Lucas Fagen</b><br><br>
                      Lucas Fagen is PhD student in the Department of Linguistics, broadly interested in different ways of studying natural language meaning across theoretical, experimental, and computational disciplines. More specific interests include pronoun resolution, alternative semantics and scalar inference, linguistic reflexes of entailment, number semantics, and the ability of LMs to do math. <br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Website</a>
+                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
 
                   </td>
                </tr>
@@ -101,7 +101,7 @@
                      <b>Chih-chan Tien</b><br><br>
                      Chih-chan Tien is a PhD student in the Department of Computer Science.  He is particularly interested in efficient methods for semantic parsing and machine translation.  Previously he received a master's degree in computational linguistics at the University of Washington.<br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Website</a>
+                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
 
                   </td>
                </tr>
@@ -116,7 +116,7 @@
                      <b>Mourad Heddaya</b><br><br>
                      Mourad is a PhD student in the Department of Computer Science, focused on language model evaluation, linguistic analysis of communication, and figurative language.<br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Website</a>
+                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
 
                   </td>
                </tr>
@@ -131,7 +131,7 @@
                      <b>Aswathy Ajith</b><br><br>
                      Aswathy Ajith is a PhD student in the Department of Computer Science. She is broadly interested in exploring how large language models store and retrieve knowledge, and how they can benefit from combining it with external knowledge sources. She is also interested in knowledge extraction from large language models for enhancing scientific discovery. <br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Website</a>
+                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
 
                   </td>
                </tr>
@@ -145,7 +145,7 @@
                    <td style="border:0px;">
                      <b>Brian (Deuksin) Kwon</b><br><br>
                      Brian is a PhD student in the Department of Computer Science. He is interested in diverse topics of Natural Language Processing (NLP), with a current focus on how to improve models' language understanding and reasoning abilities, and how to inject external knowledge (knowledge-grounded generation). <br><br>
-                     <a href="https://yangalan123.github.io/">Website</a>
+                     <a href="https://yangalan123.github.io/">Personal website</a>
 
                   </td>
                </tr>
@@ -159,7 +159,7 @@
                    <td style="border:0px;">
                      <b>Lalchand Pandia</b><br><br>
                      Lalchand is a PhD student in the Department of Computer Science. His research interest is in Natural Language Understanding with a focus on the fundamental understanding of meaning representations. <br><br>
-                     <a href="https://yangalan123.github.io/">Website</a>
+                     <a href="https://yangalan123.github.io/">Personal website</a>
 
                   </td>
                </tr>
@@ -174,7 +174,7 @@
                      <b>Chenghao Yang</b><br><br>
                      Chenghao is a PhD student in the Department of Computer Science. He is interested in building a better human-AI collaboration interface, and in trying to democratize NLP :-).
                      Specific interests: Machine Learning, Trustworthy NLP, Robustness, Explainability, Evaluation, Controlled Generation. <br><br>
-                     <a href="https://yangalan123.github.io/">Website</a>
+                     <a href="https://yangalan123.github.io/">Personal website</a>
 
                   </td>
                </tr>
@@ -188,7 +188,7 @@
                    <td style="border:0px;">
                      <b>Jiaxuan Li</b><br><br>
                      Jiaxuan is a PhD student in Language Science at UC Irvine, advised by Richard Futrell and also collaborating with the CompLing Lab. She is interested in understanding the cognitive process of human sentence processing, drawing insights from experimental and computational approaches. <br><br>
-                     <a href="https://goldengua.github.io">Website</a>
+                     <a href="https://goldengua.github.io">Personal website</a>
 
                   </td>
                </tr>
