--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,11 @@
   of pre-trained language models, studying and improving competence with compositional meaning understanding in NLP models, as well as
   using computational models to test hypotheses about the mechanisms underlying language processing in humans. <br><br>
 
-  <hr>
+  <hr style="width:800px;">
 
 </div>
 
-<h3 class="project">Controlled evaluation of compositional meaning understanding in pre-trained LMs</h3>
+<h3>Controlled evaluation of compositional meaning understanding in pre-trained LMs</h3>
   <div class="project">
 
     In this body of work our priority is to establish reliable and robust evaluations for the compositional meaning
@@ -53,7 +53,7 @@
 
 </div>
 
-<h3 class="project">Assessment of other linguistic competence and sensitivity in pre-trained LMs</h3>
+<h3>Assessment of other linguistic competence and sensitivity in pre-trained LMs</h3>
   <div class="project">
 
     In this line of work we apply tests from psycholinguistics to examine pragmatic sensitivities developed (or not developed)
@@ -88,7 +88,7 @@
 
   </div>
 
-<h3 class="project">Computational modeling of real-time language processing in humans</h3>
+<h3>Computational modeling of real-time language processing in humans</h3>
     <div class="project">
 
       In this body of work we design computational models to test hypotheses about the cognitive mechanisms driving
