refine proj description

--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,9 @@
 <h3>Assessment of other linguistic competence and sensitivity in pre-trained LMs</h3>
   <div class="project">
 
-    In this line of work we apply tests from psycholinguistics to examine pragmatic sensitivities developed (or not developed)
-    by pre-trained language models as a result of their pre-training. <br><br>
+    Beyond assessment of compositional meaning understanding per se, our group has investigated a wide range of linguistic competences, behavioral sensitivities, and encoding patterns in pre-trained language models.
+    Topics of interest include conceptual property knowledge and induction, discourse and pragmatic competence, response to syntactic anomaly, sensitivity to presence of "prime words", and encoding in contextual embeddings
+    of different types of linguistic information from surrounding words. <br><br>
 
     <b>Example papers:</b><br><br>
 
@@ -93,7 +94,7 @@
 
       In this body of work we design computational models to test hypotheses about the cognitive mechanisms driving
       the robust and rapid language processing in the human brain. We draw selectively on probabilistic and representational
-      measures from large language models to increase stimulus-level statistical sensitivities of our cognitive models.<br><br>
+      measures from pre-trained language models to increase stimulus-level statistical sensitivities of our cognitive models.<br><br>
 
       <b>Example papers:</b>
       <ul>
