personal website links fix

--- a/people.html
+++ b/people.html
@@ -86,7 +86,7 @@
                      <b>Lucas Fagen</b><br><br>
                      Lucas Fagen is PhD student in the Department of Linguistics, broadly interested in different ways of studying natural language meaning across theoretical, experimental, and computational disciplines. More specific interests include pronoun resolution, alternative semantics and scalar inference, linguistic reflexes of entailment, number semantics, and the ability of LMs to do math. <br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
+                     <a href="https://linguistics.uchicago.edu/people/lucas-fagen">Personal website</a>
 
                   </td>
                </tr>
@@ -101,7 +101,7 @@
                      <b>Chih-chan Tien</b><br><br>
                      Chih-chan Tien is a PhD student in the Department of Computer Science.  He is particularly interested in efficient methods for semantic parsing and machine translation.  Previously he received a master's degree in computational linguistics at the University of Washington.<br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
+                     <a href="https://cs.uchicago.edu/people/chih-chan-tien/">Personal website</a>
 
                   </td>
                </tr>
@@ -131,7 +131,7 @@
                      <b>Aswathy Ajith</b><br><br>
                      Aswathy Ajith is a PhD student in the Department of Computer Science. She is broadly interested in exploring how large language models store and retrieve knowledge, and how they can benefit from combining it with external knowledge sources. She is also interested in knowledge extraction from large language models for enhancing scientific discovery. <br><br>
 
-                     <a href="https://people.cs.uchicago.edu/~mourad/">Personal website</a>
+                     <a href="http://cs.uchicago.edu/people/aswathy-ajith/">Personal website</a>
 
                   </td>
                </tr>
@@ -145,7 +145,7 @@
                    <td style="border:0px;">
                      <b>Brian (Deuksin) Kwon</b><br><br>
                      Brian is a PhD student in the Department of Computer Science. He is interested in diverse topics of Natural Language Processing (NLP), with a current focus on how to improve models' language understanding and reasoning abilities, and how to inject external knowledge (knowledge-grounded generation). <br><br>
-                     <a href="https://yangalan123.github.io/">Personal website</a>
+
 
                   </td>
                </tr>
@@ -159,7 +159,7 @@
                    <td style="border:0px;">
                      <b>Lalchand Pandia</b><br><br>
                      Lalchand is a PhD student in the Department of Computer Science. His research interest is in Natural Language Understanding with a focus on the fundamental understanding of meaning representations. <br><br>
-                     <a href="https://yangalan123.github.io/">Personal website</a>
+                     <a href="https://lalchandpandia.github.io/">Personal website</a>
 
                   </td>
                </tr>
