--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                        computational methods to study language in humans and artificial intelligence. Our research spans areas of <b>natural language processing (NLP)</b>
                        and <b>computational cognitive modeling</b>. <br><br>
 
-                       In our NLP work we have a particular focus on evaluation and improvement of <b>understanding of compositional meaning in language</b>, as well as a host of
+                       In our NLP research we have a particular focus on evaluation and improvement of <b>understanding of compositional meaning in language</b>, as well as a host of
                        other dimensions of linguistic competence.<br><br>
                        In our computational cognitive modeling work, our focus is on designing transparent computational frameworks to test <b>hypotheses regarding the mechanisms
                        underlying real-time processing</b> of language in humans.
