--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                        In our NLP research we have a particular focus on evaluation and improvement of <b>understanding of compositional meaning in language</b>, as well as a host of
                        other dimensions of linguistic competence.<br><br>
-                       In our computational cognitive modeling work, our focus is on designing transparent computational frameworks to test <b>hypotheses regarding the mechanisms
+                       In our computational cognitive modeling work, the focus is on designing transparent computational frameworks to test <b>hypotheses regarding the mechanisms
                        underlying real-time processing</b> of language in humans.
                      </td>
                  </tr>
