--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <tr style="border:0px;">
                      <td style="border:0px;">
 
-                             <img style="display:block;width:500px;border-radius:70%" src="picnicimage.jpg"/>
+                             <img style="display:block;width:500px;border-radius:70%" src="gathering2022.jpg"/>
 
                      </td>
                      <td style="border:0px;">
